Fix styling bug (not responsive, however)

--- a/frontend/src/app/views/systemstats/systemstats.component.scss
+++ b/frontend/src/app/views/systemstats/systemstats.component.scss
@@ -21,6 +21,11 @@
     max-height: 150px;
 }
 
+.chart-container {
+    max-width: 130px;
+    max-height: 130px;
+}
+
 .header-info {
     font-weight: lighter;
 }
